[gd_scene load_steps=6 format=2]

[ext_resource path="res://paths/path_container.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/cube_v2.gd" type="Script" id=2]

[sub_resource type="Curve3D" id=1]
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.290196, 0.556863, 0.658824, 1 )

[sub_resource type="BoxShape" id=2]

[node name="cube_v2" type="Spatial"]
script = ExtResource( 2 )

[node name="path_container" parent="." instance=ExtResource( 1 )]

[node name="actual_path" type="Path" parent="."]
curve = SubResource( 1 )

[node name="follower" type="PathFollow" parent="actual_path"]

[node name="Area" type="Area" parent="actual_path/follower"]

[node name="CSGBox" type="CSGBox" parent="actual_path/follower/Area"]
material = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="actual_path/follower/Area"]
shape = SubResource( 2 )
[connection signal="area_entered" from="actual_path/follower/Area" to="." method="_on_Area_area_entered"]
